libs/extractor/tests/snapshots/all_tests__typography_style.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Text} from '@devup-ui/core'\n<Text typography=\"$heading\" />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Typography(
            "$heading",
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n<span className=\"typo-$heading\" />;\n",
}
